SF Primes/src/objects/Project_Log__c.object
<CustomObject>
    <description>Contains various types of Project Log including Action Items, Change Requests, Issues, Lessons Learned and Risks to associate with either a Project or SubProject.</description>
    <fields>
        <fullName>AI_Project_Manager__c</fullName>
        <formula>&quot;TRUE&quot;</formula>
        <label>AI Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approach__c</fullName>
        <label>Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associated_Trip_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used when the Project log entry is associated with a Trip Report</description>
        <inlineHelpText>Please select the associated Trip Report</inlineHelpText>
        <label>Associated Trip Report</label>
        <referenceTo>Trip_Report__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDK_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDK Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Logs_CDK_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDK_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDK Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Logs_CDK_Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDK_Issue_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDK Issue Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDK_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDK Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Logs_CDK_Requestor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_Project_Manager__c</fullName>
        <formula>&quot;TRUE&quot;</formula>
        <label>CR Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>CDK Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/CDK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Logs (Approver)</relationshipLabel>
        <relationshipName>Project_Logs_Client_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Assignee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Logs (Assignee)</relationshipLabel>
        <relationshipName>Project_Logs_Client_Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Issue_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Issue Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Logs (Client Issue Owner)</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Logs (Requestor)</relationshipLabel>
        <relationshipName>Project_Logs_Client_Requestor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales-FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discussion__c</fullName>
        <label>Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_Report_To_Me__c</fullName>
        <formula>(NOT(ISBLANK( Manager_Id_Of_Project_Manager__c )) &amp;&amp; (Manager_Id_Of_Project_Manager__c == $User.Id)) || 
(NOT(ISBLANK(CDK_Assignee__r.ManagerId)) &amp;&amp; (CDK_Assignee__r.ManagerId == $User.Id)) || 
(NOT(ISBLANK( Manager_Id_Of_Manager__c )) &amp;&amp; ( Manager_Id_Of_Manager__c == $User.Id))</formula>
        <label>Does Report To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Impact_of_Change__c</fullName>
        <label>Impact of Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Assigned_To_Me__c</fullName>
        <formula>NOT(ISBLANK( CDK_Assignee__c )) &amp;&amp; ( CDK_Assignee__c == $User.Id)</formula>
        <label>Is Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Managed_By_Me__c</fullName>
        <formula>NOT(ISBLANK( SubProject_Manager_Id__c )) &amp;&amp; (SubProject_Manager_Id__c == $User.Id)</formula>
        <label>Is Project Managed By Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Project_Manager__c</fullName>
        <formula>Sub_Project_Issue__r.Project_Manager__r.FirstName &amp; &quot; &quot; &amp; Sub_Project_Issue__r.Project_Manager__r.LastName</formula>
        <label>Issue Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Field_API_Name_to_Subproject__c</fullName>
        <formula>IF(NOT(ISBLANK(Sub_Project_Action_Items__c)) , &quot;Action_Items__c&quot;, 
  IF(NOT(ISBLANK(Sub_Project_Change_Request__c)) , &quot;Change_Request__c&quot;, 
    IF(NOT(ISBLANK(Sub_Project_Issue__c)) , &quot;Issue__c&quot;, 
      IF(NOT(ISBLANK(Sub_Project_Lessons_Learned__c)) , &quot;Lessons_Learned__c&quot;, 
        IF(NOT(ISBLANK(Sub_Project_Risk__c)) , &quot;Risk__c&quot;, 
          &quot;UNDEFINED&quot;
        )
      )
    )
  )
)</formula>
        <label>Lookup Field API Name to Subproject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id_Of_Manager__c</fullName>
        <formula>CASE( Record_Type_Name__c , 
&quot;Action Item&quot;, Sub_Project_Action_Items__r.Manager_Id_Of_Manager__c , 
&quot;Change Request&quot;, Sub_Project_Change_Request__r.Manager_Id_Of_Manager__c, 
&quot;Issue&quot;, Sub_Project_Issue__r.Manager_Id_Of_Manager__c, 
&quot;Lesson Learned&quot;, Sub_Project_Lessons_Learned__r.Manager_Id_Of_Manager__c, 
&quot;Risk&quot;, Sub_Project_Risk__r.Manager_Id_Of_Manager__c, 
&quot;&quot;)</formula>
        <label>Manager Id Of Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id_Of_Project_Manager__c</fullName>
        <label>Manager Id Of Project Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on PSR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Impact__c</fullName>
        <label>Priority/Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Step__c</fullName>
        <label>Process Step</label>
        <picklist>
            <picklistValues>
                <fullName>Step 1: Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 2: Project Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 3: Site Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 4: CDK Go Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 5: Transition Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 6: Ongoing Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Action_Items__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project - Action Items</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Project_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Change_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project - Change Request</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Project_Change_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Issue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project - Issue</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Project_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Lessons_Learned__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project - Lessons Learned</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Project_Lessons_Learned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>AI_Project_Manager__c &amp; &quot; &quot; &amp; Issue_Project_Manager__c &amp; &quot; &quot; &amp;  CR_Project_Manager__c</formula>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>(Sub_Project_Action_Items__r.Impact_Project_Numbers__c) &amp;  (Sub_Project_Change_Request__r.Impact_Project_Numbers__c) &amp; (Sub_Project_Issue__r.Impact_Project_Numbers__c) &amp; (Sub_Project_Lessons_Learned__r.Impact_Project_Numbers__c) &amp; (Sub_Project_Risk__r.Impact_Project_Numbers__c)</formula>
        <label>Impact Project #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Risk__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project - Risk</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Project_Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Retrieves Project Name based on Record Type.</description>
        <formula>CASE( Record_Type_Name__c , 
&quot;Action Item&quot;, Project_Action_Items__r.Name , 
&quot;Change Request&quot;, Project_Change_Request__r.Name ,
&quot;Issue&quot;, Project_Issue__r.Name ,
&quot;Lesson Learned&quot;, Project_Lessons_Learned__r.Name ,
&quot;Risk&quot;, Project_Risk__r.Name ,
&quot;&quot;)</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Response__c</fullName>
        <label>Resolution/Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Project_Manager__c</fullName>
        <formula>&quot;TRUE&quot;</formula>
        <label>Risk Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProject_Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confidential check box from parent Subproject which is populated from trigger</description>
        <label>SubProject Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubProject_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(Sub_Project_Action_Items__c)) , Sub_Project_Action_Items__c, 
  IF(NOT(ISBLANK(Sub_Project_Change_Request__c)) , Sub_Project_Change_Request__c, 
    IF(NOT(ISBLANK(Sub_Project_Issue__c)) , Sub_Project_Issue__c, 
      IF(NOT(ISBLANK(Sub_Project_Lessons_Learned__c)) , Sub_Project_Lessons_Learned__c,
        IF(NOT(ISBLANK(Sub_Project_Risk__c)) , Sub_Project_Risk__c, 
          &quot;&quot;
        )
      )
    )
  )
)</formula>
        <label>SubProject Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Manager_Id__c</fullName>
        <label>SubProject Manager Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <description>Retrieves SubProject Name based on Record Type</description>
        <formula>CASE( Record_Type_Name__c ,
&quot;Action Item&quot;,  Sub_Project_Action_Items__r.SubProject_Name__c ,
&quot;Change Request&quot;,  Sub_Project_Change_Request__r.SubProject_Name__c ,
&quot;Issue&quot;,  Sub_Project_Issue__r.SubProject_Name__c ,
&quot;Lesson Learned&quot;,  Sub_Project_Lessons_Learned__r.SubProject_Name__c ,
&quot;Risk&quot;,  Sub_Project_Risk__r.SubProject_Name__c ,
&quot;&quot;)</formula>
        <label>SubProject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Project_Action_Items__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-Project - Action Items</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Sub_Project_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Project_Change_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-Project - Change Request</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Project_Issue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-Project - Issue</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Project_Lessons_Learned__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-Project - Lessons Learned</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Sub_Project_Lessons_Learned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Project_Risk__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-Project - Risk</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <label>Trigger</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming (Custom &amp; Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car !nk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Log</label>
    <listViews>
        <fullName>AI_All_Assigned_To_Me</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Is_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - All - Assigned To Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AI_All_Assigned_To_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - All - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AI_All_Project_Managed_By_Me</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - All - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AI_Closed_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - Closed - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AI_Closed_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - Closed - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AI_Open_Assigned_To_Me</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Is_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - Open - Assigned To Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AI_Open_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - Open - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AI_Open_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - Open - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <label>Action Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Action_Items_Closed_Assigned_To_Me</fullName>
        <columns>NAME</columns>
        <columns>Project_Action_Items__c</columns>
        <columns>SubProject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Log__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Is_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AI - Closed - Assigned To Me</label>
        <language>en_US</language>
    </listViews>
</CustomObject>